# llm_explorer

./: .gitattributes  .gitignore  README.md  direct_predict.py  main.py  predict.py  pyproject.toml
train/: train_sentiment_analysis.py  train_text_generation.py
