[project]
name = "llm-explorer"
version = "0.1.0"
description = ""
authors = [
    {name = "Qm",email = "qim0055@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.53.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "accelerate (>=1.8.1,<2.0.0)",
    "protobuf (>=6.31.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
